# GridSenseAI

./: .gitignore  CHANGELOG.md  test_api.py
backend/: .env.example  Dockerfile  README.md  alembic.ini  backfill.py  check_tables.py  create_routers.py  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  test_dbapi.py  test_energy.py  test_etl.py  test_grid.py  test_iex.py  test_iex_api.py  test_market.py  test_rest_api.py  test_sdk.py  test_sdk_api.py  test_services.py  test_sync.py
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: c5ef64974f42_initial_mvp_models.py  e81d20401112_add_analytics_tables_and_columns.py
backend/api_explorer/: README.md  config.py  endpoints.py  explorer.py  logger.py  report_generator.py
backend/app/: __init__.py  main.py
backend/app/api/: dependencies.py  deps.py
backend/app/bootstrap/: initializer.py  seed_manager.py  verification.py
backend/app/cli/: db.py
backend/app/core/: __init__.py  cache.py  config.py  constants.py  environment.py  exceptions.py  logging.py  security.py  settings.py
backend/app/database/: base.py  seed.py  session.py
backend/app/db/: __init__.py  base.py  engine.py  enums.py  init_db.py  metadata.py  mixins.py  naming.py  session.py  types.py
backend/app/etl/: exceptions.py  orchestrator.py  registry.py  utils.py
backend/app/exceptions/: custom_exceptions.py  handlers.py
backend/app/ingestion/: __init__.py
backend/docs/: CODING_STANDARDS.md
backend/scripts/: check_db.py  test_sync.py
backend/tests/: test_energy_atlas_sdk.py  test_system_endpoints.py
(+301 files in other folders)
